re PR target/14857 (Gcc segfault on duplicated asm statement)

2004-04-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/14857
	Backport from mainline:

	* config/ia64/ia64.c (ia64_encode_section_info): Don't prod
	global register variables.

From-SVN: r80963